# feast-dolt

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/pit_spike/: README.md  RFC.md  discussion_followup_implementation.md  discussion_followup_multi_fv.md  discussion_post.md  setup.sql  spike.py
src/feast_dolt/: __init__.py  offline_store.py  source.py
tests/: test_integration_dolt.py  test_offline_store.py
